[gd_scene load_steps=84 format=2]

[ext_resource path="res://Bosses/Lizard_Boss/spritesheets/giantlizard_death_15.png" type="Texture" id=1]
[ext_resource path="res://Bosses/Lizard_Boss/spritesheets/giantlizard_walk_7.png" type="Texture" id=2]
[ext_resource path="res://Bosses/Lizard_Boss/spritesheets/giantlizard_spit_10.png" type="Texture" id=3]
[ext_resource path="res://Bosses/Lizard_Boss/spritesheets/giantlizard_waking_8.png" type="Texture" id=4]
[ext_resource path="res://Bosses/Lizard_Boss/spritesheets/giantlizard_sleeping_12.png" type="Texture" id=5]
[ext_resource path="res://Bosses/Lizard_Boss/spritesheets/giantlizard_slap_13.png" type="Texture" id=6]
[ext_resource path="res://Bosses/Lizard_Boss/spritesheets/giantlizard_idle_8.png" type="Texture" id=7]
[ext_resource path="res://Bosses/Lizard_Boss/Lizard_Boss.gd" type="Script" id=8]
[ext_resource path="res://Misc/Health_Bar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Shaders/flash.tres" type="Shader" id=10]
[ext_resource path="res://Enemies/Enemy_Abstract_Class.tscn" type="PackedScene" id=11]

[sub_resource type="ShaderMaterial" id=85]
shader = ExtResource( 10 )
shader_param/flash_color = null
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 7 )
region = Rect2( 220, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 7 )
region = Rect2( 440, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 7 )
region = Rect2( 660, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 7 )
region = Rect2( 880, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 7 )
region = Rect2( 1100, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 7 )
region = Rect2( 1320, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 7 )
region = Rect2( 1540, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 5 )
region = Rect2( 220, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 5 )
region = Rect2( 440, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 5 )
region = Rect2( 660, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 5 )
region = Rect2( 880, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 5 )
region = Rect2( 1100, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 5 )
region = Rect2( 1320, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 5 )
region = Rect2( 1540, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 5 )
region = Rect2( 1760, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 5 )
region = Rect2( 1980, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 5 )
region = Rect2( 2200, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 5 )
region = Rect2( 2420, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 1 )
region = Rect2( 220, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 1 )
region = Rect2( 440, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 1 )
region = Rect2( 660, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 1 )
region = Rect2( 880, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 1 )
region = Rect2( 1100, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 1 )
region = Rect2( 1320, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 1 )
region = Rect2( 1540, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 1 )
region = Rect2( 1760, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 1 )
region = Rect2( 1980, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 1 )
region = Rect2( 2200, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 1 )
region = Rect2( 2420, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 1 )
region = Rect2( 2640, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 1 )
region = Rect2( 2860, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 1 )
region = Rect2( 3080, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 2 )
region = Rect2( 220, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 2 )
region = Rect2( 440, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 2 )
region = Rect2( 660, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 2 )
region = Rect2( 880, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 2 )
region = Rect2( 1100, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 2 )
region = Rect2( 1320, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 3 )
region = Rect2( 880, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 3 )
region = Rect2( 1100, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 3 )
region = Rect2( 1320, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 3 )
region = Rect2( 1540, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 3 )
region = Rect2( 1760, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 3 )
region = Rect2( 1980, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 4 )
region = Rect2( 220, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 4 )
region = Rect2( 440, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 4 )
region = Rect2( 660, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 4 )
region = Rect2( 880, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 4 )
region = Rect2( 1100, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 4 )
region = Rect2( 1320, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 4 )
region = Rect2( 1540, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 6 )
region = Rect2( 220, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 6 )
region = Rect2( 440, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 6 )
region = Rect2( 660, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 6 )
region = Rect2( 880, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 6 )
region = Rect2( 1100, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 6 )
region = Rect2( 1320, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 6 )
region = Rect2( 1540, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 6 )
region = Rect2( 1760, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 6 )
region = Rect2( 1980, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 6 )
region = Rect2( 2200, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 6 )
region = Rect2( 2420, 0, 220, 130 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 6 )
region = Rect2( 2640, 0, 220, 130 )

[sub_resource type="SpriteFrames" id=74]
animations = [ {
"frames": [ SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ) ],
"loop": true,
"name": "sleeping",
"speed": 10.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ) ],
"loop": true,
"name": "spit",
"speed": 10.0
}, {
"frames": [ SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ) ],
"loop": true,
"name": "waking",
"speed": 10.0
}, {
"frames": [ SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ) ],
"loop": true,
"name": "windup",
"speed": 10.0
}, {
"frames": [ SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ) ],
"loop": true,
"name": "slap",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=75]
extents = Vector2( 66.5, 16.5 )

[sub_resource type="RectangleShape2D" id=76]
extents = Vector2( 58.25, 47 )

[node name="Lizard_Boss" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 85 )
position = Vector2( -14, 10 )
frames = SubResource( 74 )
animation = "idle"
frame = 5
playing = true

[node name="spitpos" type="Position2D" parent="."]
visible = false
position = Vector2( -65, 30 )

[node name="hitbox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.5, 59.5 )
shape = SubResource( 75 )

[node name="attack" type="Timer" parent="."]

[node name="slap" type="Area2D" parent="."]
visible = false

[node name="slapbox" type="CollisionShape2D" parent="slap"]
position = Vector2( -36.25, 45 )
shape = SubResource( 76 )

[node name="spit_attack" type="Timer" parent="."]
wait_time = 3.0

[node name="Health_Bar" parent="." instance=ExtResource( 9 )]
margin_left = -67.0
margin_top = -15.0
margin_right = 33.0
margin_bottom = 25.0
rect_scale = Vector2( 1.336, 1 )
value = 100.0

[node name="regen" type="Timer" parent="."]
wait_time = 2.0

[node name="Enemy_Abstract_Class" parent="." instance=ExtResource( 11 )]
position = Vector2( 6, 47 )

[node name="chestpos" type="Position2D" parent="."]
position = Vector2( 6, 47 )

[node name="flash_timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="body_entered" from="slap" to="." method="_on_slap_body_entered"]
[connection signal="body_exited" from="slap" to="." method="_on_slap_body_exited"]
[connection signal="timeout" from="spit_attack" to="." method="_on_spit_attack_timeout"]
[connection signal="timeout" from="regen" to="." method="_on_regen_timeout"]
[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]
